--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "habit-control-front-angular",
+  "name": "free-chat-front-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
